# aic2_assignment

./: .gitignore  README.md  aic2-assignment.ipynb  eda.ipynb  pyproject.HOLD.toml  pyproject.toml  rf.ipynb  tcnn.ipynb
data/: AppleStockPrice.csv  split_dataset.pickle
