[tool.poetry]
name = "aic2-assignment"
package-mode=false#If you want to use Poetry only for dependency management but not for packaging

version = "1.1.1"
description = "Work done in the context of assignment for the AI2C"
authors = ["agerom <agerom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "*"
numpy = "*"
notebook = "*"
ipython = "*"
requests = "*"
jupyter = "^1.1.1"
holidays = "*"
matplotlib = "*"
seaborn = "*"
scikit-learn = "*"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.15.0"
tensorflow-intel = "2.15.0"
#tensorflow-addons= "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

